--- a/index.html
+++ b/index.html
@@ -25,23 +25,31 @@
 
 
     <div class="container">
+      <div class="row">
+        <img src="./images/Match.png" alt="logo">
+      </div>
+          <div class="col-md-12">
+<div class="background" id="b1">
         <div class="row image">
             <div class="col-md-12">
                 <!--<div class="jumbotron">-->
-                  <img id="snow" src="./images/snow.png" alt="snow">
-                    <div id="head">
-                      <h1>Match It</h1>
-                      <p>Match those Penguins</p>
-                    </div>
+                <!--<img id="snow" src="./images/snow.png" alt="snow">
+                  <div id="head">
+                    <h1>Match It</h1>
+                    <p>Match those Penguins</p>
+                  </div>-->
               </div>
           </div>
 
 
         <div class="row 2">
           <div class="col-md-9">
-            <audio id="sound" src="./sound/Yeah.mp3" type="sound/mp3"></audio>
-            <button class= "button" id="restart">Restart</button>
-            <button class="button" id="stop">Stop</button>
+            <audio id="sound1" src="./sound/Yeah.mp3" type="sound/mp3"></audio>
+            <audio id="sound2" src="./sound/woscream4.mp3" type="sound/mp3"></audio>
+            <audio id="sound3" src="./sound/Ghost-in-the-house.mp3" type="sound/mp3"></audio>
+            <audio id="sound4" src="./sound/counter.mp3" type="sound/mp3"></audio>
+            <button class= "button" id="start">start</button>
+            <button class="button" id="gamemode">Monster</button>
             <button class="button" id="time">60</button>
 
             <table id="game">
@@ -174,6 +182,7 @@
         </div>
       </div>
       </div>
+    </div>
 
 
 
