how to play pic included

--- a/index.html
+++ b/index.html
@@ -46,8 +46,6 @@
           <div class="col-md-9">
             <audio id="sound1" src="./sound/Yeah.mp3" type="sound/mp3"></audio>
             <audio id="sound2" src="./sound/woscream4.mp3" type="sound/mp3"></audio>
-            <audio id="sound3" src="./sound/Ghost-in-the-house.mp3" type="sound/mp3"></audio>
-            <audio id="sound4" src="./sound/counter.mp3" type="sound/mp3"></audio>
             <button class= "button" id="start">start</button>
             <button class="button" id="gamemode">Monster</button>
             <button class="button" id="time">60</button>
@@ -177,7 +175,9 @@
                     </td>
                   </tr>
                 </table>
-
+                <div id="play">
+             <img src="./images/how to play.png" alt="logo">
+           </div>
           </div>
         </div>
       </div>
